[gd_scene load_steps=5 format=3 uid="uid://bcayrlxleucto"]

[ext_resource type="Script" uid="uid://c3teg1702ybrv" path="res://objects/pressure_plate.gd" id="1_hjmrp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hjmrp"]

[sub_resource type="BoxMesh" id="BoxMesh_xnef1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlcij"]
size = Vector2(21, 4)

[node name="PressurePlate" type="Node2D"]
script = ExtResource("1_hjmrp")

[node name="ButtonMesh" type="MeshInstance2D" parent="."]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
material = SubResource("CanvasItemMaterial_hjmrp")
position = Vector2(10.625, 2)
scale = Vector2(20.75, 4.5)
mesh = SubResource("BoxMesh_xnef1")

[node name="StingMesh" type="MeshInstance2D" parent="."]
position = Vector2(11, 5.5103)
rotation = 1.5708
scale = Vector2(3.24304, 1.25)
mesh = SubResource("BoxMesh_xnef1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.5, 2)
shape = SubResource("RectangleShape2D_wlcij")

[node name="RiseTImer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="RiseTImer" to="." method="_on_rise_t_imer_timeout"]
